[package]
name = "haddock-restraints-wasm"
version = "0.0.1"
edition = "2021"
description = "WebAssembly binbdings for haddock-restraints"
license = "MIT"
repository = "https://github.com/haddocking/haddock-restraints"
authors = ["Rodrigo V. Honorato <r.vargashonorato@uu.nl>"]
keywords = [
  "haddock",
  "restraints",
  "bioinformatics",
  "structural-biology",
  "protein-docking",
]
categories = ["science::bioinformatics", "science"]


# [lib]
# crate-type = ["cdylib"]
#
# [dependencies]
# wasm-bindgen = "0.2"
# js-sys = "0.3"
# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.6"
# console_error_panic_hook = { version = "0.1", optional = true }
# regex = "1.11"
# pdbtbx = "0.12"
# tsify = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
